extends CanvasLayer
class_name RoomUIOnline

## ç­‰å¾…æˆ¿é—´UI
## æ˜¾ç¤ºå·²è¿žæŽ¥çš„çŽ©å®¶å’Œæ¸¸æˆå€’è®¡æ—¶

signal force_start_requested

@onready var title_label: Label = $Control/Container/TitleLabel
@onready var player_list: VBoxContainer = $Control/Container/PlayerList
@onready var status_label: Label = $Control/Container/StatusLabel
@onready var hint_label: Label = $Control/Container/HintLabel
@onready var force_start_button: Button = $Control/Container/ForceStartButton

const MAX_PLAYERS := 4

func _ready() -> void:
	# æœåŠ¡å™¨å¯ä»¥çœ‹åˆ°å¼ºåˆ¶å¼€å§‹æŒ‰é’®
	if NetworkManager.is_server():
		force_start_button.visible = true
		force_start_button.pressed.connect(_on_force_start_pressed)
	
	# åˆå§‹çŠ¶æ€
	update_player_count(0)

## æ›´æ–°çŽ©å®¶æ•°é‡æ˜¾ç¤º
func update_player_count(count: int) -> void:
	status_label.text = "%d/%d çŽ©å®¶" % [count, MAX_PLAYERS]
	
	if count >= MAX_PLAYERS:
		hint_label.text = "äººæ•°å·²æ»¡ï¼Œå³å°†å¼€å§‹æ¸¸æˆï¼"
		hint_label.add_theme_color_override("font_color", Color(1, 0.85, 0.3))
	else:
		hint_label.text = "ç­‰å¾…æ›´å¤šçŽ©å®¶åŠ å…¥ï¼Œäººæ»¡åŽè‡ªåŠ¨å¼€å§‹"
		hint_label.add_theme_color_override("font_color", Color(0.6, 0.6, 0.6))

## æ›´æ–°çŽ©å®¶åˆ—è¡¨
func update_player_list(players: Array) -> void:
	# æ¸…ç©ºæ—§åˆ—è¡¨
	for child in player_list.get_children():
		child.queue_free()
	
	# æ·»åŠ çŽ©å®¶æ¡ç›®
	for i in range(players.size()):
		var player_entry = _create_player_entry(players[i], i + 1)
		player_list.add_child(player_entry)
	
	# æ›´æ–°æ•°é‡
	update_player_count(players.size())

## åˆ›å»ºçŽ©å®¶æ¡ç›®
func _create_player_entry(player_data: Dictionary, index: int) -> HBoxContainer:
	var entry = HBoxContainer.new()
	entry.alignment = BoxContainer.ALIGNMENT_CENTER
	entry.add_theme_constant_override("separation", 15)
	
	# åºå·
	var index_label = Label.new()
	index_label.text = "%d." % index
	index_label.add_theme_font_size_override("font_size", 26)
	index_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7))
	entry.add_child(index_label)
	
	# å›¾æ ‡
	var icon_label = Label.new()
	icon_label.text = "ðŸŽ®"
	icon_label.add_theme_font_size_override("font_size", 28)
	entry.add_child(icon_label)
	
	# çŽ©å®¶åç§°
	var name_label = Label.new()
	name_label.text = player_data.display_name if player_data.has("display_name") else "Player"
	name_label.add_theme_font_size_override("font_size", 28)
	name_label.add_theme_color_override("font_color", Color(1, 1, 1))
	name_label.custom_minimum_size.x = 200
	entry.add_child(name_label)
	
	# æ ‡è®°æœ¬åœ°çŽ©å®¶
	var local_peer_id = NetworkManager.get_peer_id()
	if player_data.has("peer_id") and player_data.peer_id == local_peer_id:
		var you_label = Label.new()
		you_label.text = "(ä½ )"
		you_label.add_theme_font_size_override("font_size", 22)
		you_label.add_theme_color_override("font_color", Color(0.3, 1, 0.3))
		entry.add_child(you_label)
	
	return entry

## æ˜¾ç¤ºå€’è®¡æ—¶
func show_countdown(seconds: int) -> void:
	title_label.text = "æ¸¸æˆå°†åœ¨ %d ç§’åŽå¼€å§‹!" % seconds
	title_label.add_theme_color_override("font_color", Color(1, 0.5, 0.3))
	status_label.text = "å‡†å¤‡å¥½äº†å—ï¼Ÿ"
	hint_label.text = "å³å°†å¼€å§‹..."
	force_start_button.visible = false

## å¼ºåˆ¶å¼€å§‹æŒ‰é’®ç‚¹å‡»
func _on_force_start_pressed() -> void:
	force_start_requested.emit()
